--- a/src/styles/IMDB.css
+++ b/src/styles/IMDB.css
@@ -33,3 +33,56 @@
     align-items: center;
     padding: 0px 15px;
 }
+
+.pageno {
+    display: flex;
+    justify-content: center;
+    margin: 25px;
+}
+
+.pageno .pagebox {
+    border: 1px solid black;
+    padding: 7px 10px; 
+    cursor: pointer;
+}
+.pagebox.active {
+    background-color: gold;
+    color: black;
+}
+
+.favourite-wrapper {
+    display: flex;
+}
+
+.favourite-wrapper .left-section {
+    flex-basis: 30%;
+    background-color: beige;
+}
+
+.favourite-wrapper .right-section {
+    flex: 1;
+    background-color: aquamarine;
+}
+
+.favourite-wrapper .right-section table {
+    border-collapse : collapse ;
+}
+
+.favourite-wrapper .right-section table th, .favourite-wrapper .right-section table td{
+    border: 1px solid black ;
+}
+
+.favourite-wrapper .right-section table td .deleteBtn {
+    cursor: pointer;
+    height: 18px;
+    border: 1px solid black;
+    background-color: white;
+    padding: 2px 5px;
+    text-align: center;
+    border-radius: 4px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.favourite-wrapper .right-section table td .deleteBtn:hover {
+    background-color: rgb(195, 194, 194); 
+}
