--- a/src/styles/IMDB.css
+++ b/src/styles/IMDB.css
@@ -1,27 +1,51 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.favheading{
+    margin: 0px;
+    margin-left: 12px;
+    padding: 10px;
+    font-family: cursive; 
+
+}
+
 .movie-list{
     display: flex;
     gap: 10px;
     margin: 15px;
     flex-wrap: wrap;
-    
+}
+
+.text{
+    margin-left: 15px;
+    color:rgb(255, 217, 0);
+    font-weight: 200;
 }
 
 .movie-card{
     width: 200px;
-
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
     padding: 10px;
     max-width: 100%; 
+    background-color: aliceblue;
 }
 
 .movie-card img {
     width: 100%;
 }
 
+.movie-card .movie-name {
+    text-decoration: none ;
+    color : black;
+}
 
 .heading{
     font-family: cursive; 
-    margin:15px 15px 5px 15px ;
+    margin:0px 0px 0px 15px ;
+    color: gold;
+    background-color: black;
 }
 
 .navbar-wrapper{
@@ -34,6 +58,14 @@
     padding: 0px 15px;
 }
 
+.navbar-wrapper .links {
+    text-decoration: none;
+    margin: 0px 13px;
+    color: black;
+    font-weight: 500;
+    font-weight: 700;
+}
+
 .pageno {
     display: flex;
     justify-content: center;
@@ -44,6 +76,7 @@
     border: 1px solid black;
     padding: 7px 10px; 
     cursor: pointer;
+    background-color: white;
 }
 .pagebox.active {
     background-color: gold;
@@ -51,37 +84,52 @@
 }
 
 .favourite-wrapper {
-    display: flex;
+    width: 100%;
 }
 
 .favourite-wrapper .left-section {
-    flex-basis: 30%;
-    justify-content: flex-end; 
     display: flex;
+    justify-content:center; 
+    justify-content: space-evenly;
+}
+
+.left-section input {
+    width: 300px;
+    height: 30px;
+    margin-top: 18px;
 }
 
 .favourite-wrapper .right-section {
+    justify-content: center;
+    align-items: center;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
     background-color: rgb(255, 255, 255);
+    margin-top: 20px;
 }
 
 .favourite-wrapper .right-section table {
     border-collapse : collapse ;
+    width: 100%;
 }
 
 .favourite-wrapper .right-section table th, .favourite-wrapper .right-section table td{
     border: 1px solid black ;
+    padding: 8px; 
 }
 
 .favourite-wrapper .right-section table td .deleteBtn {
     cursor: pointer;
     height: 18px;
     border: 1px solid black;
-    background-color: white;
+    background-color: rgb(235, 45, 45);
     padding: 2px 5px;
     text-align: center;
     border-radius: 4px;
     transition: background-color 0.3s ease, color 0.3s ease;
+
 }
 
 .favourite-wrapper .right-section table td .deleteBtn:hover {
@@ -90,17 +138,38 @@
 
 .genre-wrapper {
     display: flex;
-    flex-direction: column;  /* Ensures that genres are stacked vertically */
+    flex-direction: row; 
     border: 1px solid black; 
     padding: 15px; 
-    width: 200px;
+    width: auto;
 }
 
 .genre-wrapper .genre { 
     height: 30px;
     display: flex;
     align-items: center;
-    background-color: white;
+    background-color: gold;
     padding: 5px 15px; 
     margin: 1px 0; /* Adjust margin to stack genres vertically */
+    cursor: pointer; 
+}
+
+.genre-wrapper .genre.selected{
+    background-color: rgb(150, 150, 150);
+}
+
+.price {
+    margin: 20px;
+    margin-left: 20px ;
+    font-weight: 1000;
+    border: 1px solid black;
+    width: 165px;
+    padding: 4px 2px;
+    background-color: rgba(255, 217, 0, 0.637); 
+}
+
+
+.amt{
+    font-weight: 600;
+    color: rgb(94, 255, 0);
 }
